# zelda_miloutte

./: CLAUDE.md  DIALOGUE_BOX_USAGE.md  NG_PLUS_SCALING_FIX.md  README.md  TODO.md  example_dialogue_integration.py  index.html  main.py  pyproject.toml  test_ng_plus_scaling.py  test_ng_plus_simple.py  zelda_miloutte.apk
.github/workflows/: deploy.yml
tests/: conftest.py  test_achievements.py  test_camera.py  test_entity.py  test_inventory.py  test_ng_plus.py  test_pathfinding.py  test_quest_manager.py  test_save_manager.py  test_story_logic.py  test_tile.py  test_time_system.py
zelda_miloutte/: __main__.py  abilities.py  achievements.py  ai_state.py  bestiary.py  camera.py  game.py  hud.py  input_handler.py  main.py  ng_plus.py  particles.py  pathfinding.py  quest_manager.py  raycaster.py  room_manager.py  save_manager.py  settings.py  sounds.py  time_system.py  touch_controls.py  transition.py  user_settings.py  weather.py
zelda_miloutte/data/: fish.py  inventory.py  items.py  quests.py  shops.py
zelda_miloutte/entities/: archer.py  boss.py  campfire.py  chest.py  companion.py  enemy.py  entity.py  fire_imp.py  forest_guardian.py  frost_golem.py  gold.py  ice_wraith.py  inferno_drake.py  item.py  magma_golem.py  mummy.py  npc.py  player.py  projectile.py  puzzle.py  sand_worm.py  scorpion.py  shadow_stalker.py  sign.py  vine_snapper.py
zelda_miloutte/sprites/: __init__.py  ability_sprites.py  achievement_sprites.py  archer_sprites.py  boss_sprites.py  chest_sprites.py  companion_sprites.py  crystal_dragon_sprites.py  effects.py  enemy_sprites.py  hud_sprites.py  (+21 more)
(+24 files in other folders)
