[project]
name = "zelda-miloutte"
version = "0.1.0"
description = "A simple Zelda-like 2D top-down adventure game starring Miloutte"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.6",
]

[project.optional-dependencies]
dev = ["pygbag"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
zelda-miloutte = "zelda_miloutte.main:_sync_entry"
